# cbase16

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  da
dev/: lsan.supp
include/actions/: build.hpp  inject.hpp  list.hpp
include/scheme/: scheme.hpp
include/utils/: Color.hpp  debugprint.hpp  file_helpers.hpp  macros.hpp  po_struct.hpp  updater.hpp
src/: CMakeLists.txt  Makefile  exceptions.hpp  macros.h  main.cpp  parsers.h  po_struct.cpp  po_struct.hpp  scheme.cpp  scheme.h  template.cpp  template.h
src/actions/: build.cpp  build.hpp  inject.cpp  inject.hpp  list.cpp  list.hpp
src/helpers/: Color.hpp  RootDir.h  cbase_path.cpp  cbase_path.hpp  macros.h  strformat.hpp  vector_print.hpp
src/scheme/: scheme.cpp
src/utils/: file_helpers.cpp  parsers.cpp  po_struct.cpp  updater.cpp
tests/: CMakeLists.txt  scheme_builder.cpp  template_builder.cpp  test_test.cpp
